frontend/src/app/modules/policy-engine/tools-list/tools-list.component.scss
/* ... */
.chip-color-grey {
    color: var(--color-grey-6, #848fa9);
    background: var(--color-grey-3, #e1e7ef);
}

.chip-color-blue {
    color: var(--color-primary, #0031ff);
    background: rgba(6, 129, 238, 0.16);
}

.chip-color-green {
    color: #19be47;
    background: #cafdd9;
}

.btn-go-policy {
    font-family: Inter;
    font-size: 14px;
    font-style: normal;
    font-weight: 500;
    line-height: 16px;
    background: var(--color-primary, #0031ff) !important;
    color: var(--guardian-on-primary-color, #fff) !important;
}

.btn-create-multipolicy {
    font-family: Inter;
    font-size: 14px;
    font-style: normal;
    font-weight: 500;
    line-height: 16px;
    border-radius: 6px;
    border: 1px solid var(--color-secondary, #cdddfd) !important;
    background: var(--color-grey-white, #fff) !important;
    color: var(--color-primary, #0031ff) !important;
}



.tool-filters {
    display: flex;
    align-items: center;
    flex-direction: row;
    justify-content: space-between;
    font-size: 16px;

    &__control {
        margin-left: 20px;

        &:last-child {
            margin-right: 20px;
        }
    }

    .ml-8 {
        margin-left: 16px;
    }
}

.status-actions-dropdown {
    ::ng-deep {
        .p-select {
            border: 1px solid var(--color-secondary);
            outline: none !important;
            box-shadow: none !important;
        }

        .p-inputtext {
            padding: 5px 0 4px 10px;
            color: inherit;
            font-family: Inter, sans-serif;
            font-size: 14px;
            font-style: normal;
            font-weight: 500;
        }
    }

    &[published="true"] {
        ::ng-deep {
            .p-component {
                background: var(--color-accent-green-2);
            }

            .p-select-label,
            .p-select-dropdown .p-select-dropdown-icon {
                color: var(--color-accent-green-1);
            }
        }

        &[expired="true"] {
            ::ng-deep {
                .p-component {
                    background: var(--color-accent-yellow-2);
                }

                .p-select-label,
                .p-select-dropdown .p-select-dropdown-icon {
                    color: var(--color-accent-yellow-1);
                }
            }
        }
    }
}

.dropdown-item-title {
    color: #0031ff;
    font-family: Inter, sans-serif;
    font-size: 14px;
    font-style: normal;
    font-weight: 600;
}

.dropdown-item-description {
    color: #848fa9;
    font-family: Inter, sans-serif;
    font-size: 12px;
    font-style: normal;
    font-weight: 400;
}

:host ::ng-deep {
    .p-select {
        width: 125px;
        height: 40px;
        border-radius: 6px;
    }

    .p-button {
        border-radius: 8px;
    }

    .p-inputtext {
        color: #848fa9;
        font-family: Inter, sans-serif;
        font-size: 14px;
        font-style: normal;
        font-weight: 400;
        align-self: center;
    }
}

.height-28 {
    min-height: 28px;
    max-height: 28px;
}

.margin-0 {
    margin: 0;
}

.PUBLISHED-status,
.PUBLISHED-dropdown ::ng-deep .p-select {
    background: var(--color-accent-green-2);
    color: var(--color-accent-green-1);
    border: 1px solid var(--color-accent-green-1);
    // width: auto;
    width: 130px;

    .p-select-dropdown-icon {
        color: var(--color-accent-green-1);
    }
}

.PUBLISH_ERROR-status,
.PUBLISH_ERROR-dropdown ::ng-deep .p-select {
    background: #fff4f3;
    color: var(--color-accent-red-1);
    border: 1px solid var(--color-accent-red-1);
    // width: auto;
    width: 130px;

    .p-select-dropdown-icon {
        color: var(--color-accent-red-1);
    }
}

